--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "./dist/index",
   "dependencies": {
+    "@discordjs/builders": "^0.5.0",
     "@jpbberry/cache": "^1.0.4",
     "@jpbberry/load-routes": "^1.0.3",
     "@top-gg/sdk": "^3.1.1",
