--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "events": "^3.3.0",
     "express": "^4.17.1",
     "mongoose": "^5.13.7",
+    "node-fetch": "^2.6.2",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^14.17.6",
+    "@types/node-fetch": "^2.5.12",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
     "eslint": "^7.32.0",
     "eslint-config-standard-with-typescript": "^20.0.0",
